# AlugaVeiculosBackend_project

./: .gitignore  Termo do Contrato.txt  manage.py  pyproject.toml  requirements.txt
AlugaVeiculos_project/: .env.example  __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
ContratoALuguel_app/: apps.py  models.py  tests.py
ContratoALuguel_app/management/: commands.py
ContratoALuguel_app/tasks/: __init__.py  tasks.py
Perfil_app/: models.py
Perfil_app/migrations/: 0001_initial.py
Proprietario_app/: admin.py  apps.py  models.py
Proprietario_app/migrations/: 0001_initial.py
User_app/migrations/: 0001_initial.py
Veiculo_app/: admin.py  apps.py  models.py  tests.py
Veiculo_app/migrations/: 0001_initial.py  0002_veiculo_alugado_veiculo_ano_veiculo_marca_and_more.py
